# paper-ppt-agent

./: .env.example  .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml  pytest.ini  start-dev.bat  start-dev.sh  stop-dev.bat
assets/icons/: index_meta.json
assets/references/: executor-base.md  shared-standards-essential.md  shared-standards.md  strategist.md
assets/templates/: design_spec_reference.md
backend/: app.py  config.py
backend/api/: router.py  schemas.py  websocket.py
backend/generator/: icon_index.py  pptx_font_editor.py  project_manager.py  svg_critic.py  template_importer.py  template_manager.py  visual_critic.py
backend/llm/: __init__.py  base.py  provider_anthropic.py  provider_gemini.py  provider_openai.py  registry.py  retry.py  types.py
backend/orchestrator/: icon_round.py  image_search.py  manuscript.py  pipeline.py  provider_guidance.py  (+4 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: build_icon_index.py
tests/: conftest.py  test_api_generate.py  test_api_upload.py  test_cancel_job.py  test_embed_icons.py  test_manuscript.py  test_merge_adjacent_text.py  test_normalize_fonts.py  test_pipeline_smoke.py  test_pptx_font_editor.py  test_progress_projection.py  test_provider_guidance.py  test_providers.py  test_refine_workspace.py  test_research_agent.py  test_research_enrichment.py  test_scheduler.py  test_session_manager.py  test_strategist_agent.py  test_svg_executor.py  test_svg_export_media_names.py  test_svg_span_repair.py  test_svg_text_reflow.py  test_usage_tracker.py
(+91 files in other folders)
