[project]
name = "paper-ppt-agent"
version = "0.1.0"
description = "Convert academic papers (PDF/LaTeX) to editable PowerPoint presentations using multi-agent AI"
requires-python = ">=3.11"
dependencies = [
    # Backend
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    # LLM providers (native SDKs)
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    # Paper parsing
    "PyMuPDF>=1.23.0",
    "pylatexenc>=2.10",
    # PPT generation
    "python-pptx>=0.6.21",
    "svglib>=1.5.0",
    "reportlab>=4.0.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
    "lxml>=5.0.0",
    # Utilities
    "pydantic>=2.11.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
